tests/cases/control-flow/ok/while-let-aggregate-break-owner-state.ari
fn main() -> i64 {
  let token: own i64 = 5;
  while let (left, right) = (1, 2) {
    let sum = left + right;
    drop token;
    break;
  }
  return 0;
}
